Improve SIGBUS handling, fixes a crash

BUG: 276777