src/util/functions.cpp
@@ -370,10 +370,6 @@ namespace bt
 #ifdef Q_WS_WIN
 		ret = InitWindowsSocketsAPI() && ret;
 #endif
-#ifndef Q_WS_WIN
-		// Install SIGBUS handler
-		InstallBusHandler();
-#endif
 		return ret;
 	}
 
